--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>1.0-SNAPSHOT</version>
     <url>http://maven.apache.org</url>
     <dependencies>
-        
+
     </dependencies>
     <build>
         <plugins>
@@ -24,8 +24,25 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.5.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <mainClass>org.examples.java.App</mainClass>
+                    <systemProperties>
+                        <systemProperty>
+                            <key>GREETING</key>
+                            <value>Hello</value>
+                        </systemProperty>
+                        <systemProperty>
+                            <key>NAME</key>
+                            <value>World!</value>
+                        </systemProperty>
+                    </systemProperties>
                 </configuration>
             </plugin>
             <plugin>
