--- a/pod.yaml
+++ b/pod.yaml
@@ -7,16 +7,18 @@ spec:
   - name: java-app-secrets
     image: arungupta/java-app-secrets:latest
     env:
-      - name: GREETING
-        valueFrom:
-          secretKeyRef:
-            name: mysecret
-            key: GREETING
-      - name: NAME
-        valueFrom:
-          secretKeyRef:
-            name: mysecret
-            key: NAME
+#      - name: GREETING
+#        valueFrom:
+#          secretKeyRef:
+#            name: mysecret
+#            key: GREETING
+#      - name: NAME
+#        valueFrom:
+#          secretKeyRef:
+#            name: mysecret
+#            key: NAME
       - name: VAULT_ADDR
         value: http://ec2-54-237-223-40.compute-1.amazonaws.com:8200
+      - name: VAULT_TOKEN
+        value: 4e93b3c6-c459-f166-e7e9-6c48044cfdb6
   restartPolicy: Never
